# PhotoAlbum

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  Todos.db  db.sql  deploy.sh  docker-compose.yml  template.db
migrations/: 20240304122444_database.sql  20240309193347_invites.sql  db.sql
src/: app.rs  auth.rs  components.rs  db.rs  facerecog.rs  image_filter.rs  lib.rs  main.rs  session.rs  state.rs
src/app/: db.rs  upload.rs
src/components/: dialog.rs  feed copy.rs  feed.rs  feed_exp.rs  feed_prev.rs  home_page.rs  image_view.rs  invite.rs  loading.rs  login.rs  logout.rs  signup.rs  smooth.rs  testdb.rs  topbar.rs  upload.rs  users.rs
style/: _admin.scss  _color.scss  _default.scss  _dialog.scss  _dimensions.scss  _feed.scss  _homepage.scss  _image_view.scss  _loading.scss  _login_logout_signup.scss  _tooltips.scss  _topbar.scss  _upload.scss  main.scss
tests/: build_app.rs  integration_tests.rs  setup.rs
